--- a/src/Components/DashboardComponents/Manager/manager.css
+++ b/src/Components/DashboardComponents/Manager/manager.css
@@ -9,7 +9,7 @@
   color: #000;
   font-size: 32px;
   margin-bottom: 0px;
-  font-family: 'NeuzeitGro-Bol';
+  font-family: "NeuzeitGro-Bol";
   font-weight: normal;
 }
 
@@ -18,12 +18,17 @@
   color: #fff;
   background: #ea6a12;
   font-size: 16px;
- font-family: 'NeuzeitGro-Reg';
-font-weight: normal;
+  font-family: "NeuzeitGro-Reg";
+  font-weight: normal;
   border: none;
   outline: none;
   transition: all 0.3s;
-  padding: 5px 10px;
+  padding: 8px 18px;
+}
+
+.managertitle .mangerbtn > img {
+  margin: -3px 2px 0 0px;
+  display: inline-block;
 }
 
 .managertable {
@@ -34,15 +39,15 @@ font-weight: normal;
 
 .managertable table {
   width: 100%;
-  border-collapse: collapse; 
+  border-collapse: collapse;
   min-width: 950px;
   margin-bottom: 10px;
-} 
+}
 
 .managertable table th {
   font-size: 18px;
   color: #000;
-  font-family: 'NeuzeitGro-Reg';
+  font-family: "NeuzeitGro-Reg";
   font-weight: normal;
   padding: 10px 5px;
   line-height: 1.2;
@@ -50,38 +55,42 @@ font-weight: normal;
 
 .managertable table th:first-child,
 .managertable table td:first-child {
-  width: 50px;
+  min-width: 80px;
+  text-align: center;
 }
 
 .managertable table th:nth-child(2),
 .managertable table td:nth-child(2) {
-  width: 170px;
+  min-width: 170px;
+  width: 25%;
 }
 
 .managertable table th:nth-child(3),
 .managertable table td:nth-child(3) {
-  width: 240px;
+  min-width: 240px;
+  width: 25%;
 }
 
 .managertable table th:nth-child(4),
 .managertable table td:nth-child(4) {
-  width: 200px;
+  min-width: 200px;
+  width: 25%;
 }
 
 .managertable table th:nth-child(5),
 .managertable table td:nth-child(5) {
-  width: 130px;
+  min-width: 130px;
 }
 
 .managertable table th:nth-child(6),
 .managertable table td:nth-child(6) {
-  width: 400px;
+  min-width: 400px;
   word-wrap: break-word;
 }
 
 .managertable table th:last-child,
 .managertable table td:last-child {
-  width: 120px;
+  min-width: 140px;
 }
 
 .managertable table th:last-child {
@@ -107,19 +116,19 @@ font-weight: normal;
 .managertable table td {
   font-size: 16px;
   color: #000;
- font-family: 'NeuzeitGro-Reg';
-font-weight: normal;
+  font-family: "NeuzeitGro-Reg";
+  font-weight: normal;
   line-height: 1.2;
   padding: 10px 5px;
-  font-family: 'NeuzeitGro-Reg';
+  font-family: "NeuzeitGro-Reg";
   font-weight: normal;
-} 
+}
 
 .managertable table tr {
   display: flex;
-  align-items: center; 
+  align-items: center;
   justify-content: space-between;
-  border-radius: 12px; 
+  border-radius: 12px;
 }
 
 .managertable table tr:first-child {
@@ -135,15 +144,17 @@ font-weight: normal;
   outline: none;
   border: 1px solid #cdcdcd;
   border-radius: 100px;
+  color: rgba(205, 205, 205, 1);
   padding: 5px 10px;
   font-size: 16px;
   background: transparent;
- font-family: 'NeuzeitGro-Reg';
-font-weight: normal;
+  font-family: "NeuzeitGro-Reg";
+  font-weight: normal;
   transition: all 0.3s ease;
   padding: 7px 30px;
-  font-family: 'NeuzeitGro-Reg';
+  font-family: "NeuzeitGro-Reg";
   font-weight: normal;
+  line-height: 1;
 }
 
 .asbtn:hover {
@@ -164,7 +175,8 @@ font-weight: normal;
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.4);
+  /* background: rgba(0, 0, 0, 0.4); */
+  background-color:   rgb(199 199 199 / 40%);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -174,7 +186,7 @@ font-weight: normal;
 }
 
 .addmanagerpopup.popup {
-  align-items: normal;
+  align-items: normal; 
 }
 
 .addmanagerpopup .popupinner {
@@ -200,10 +212,6 @@ font-weight: normal;
   margin-bottom: 50px;
 }
 
-.addmanagerpopup .popupbody {
-  background-color: rgba(255, 255, 255, 1);
-}
-
 .addmanagerpopup .popupbody form {
   position: relative;
 }
@@ -217,8 +225,8 @@ font-weight: normal;
 .formbox label {
   color: #000;
   font-size: 16px;
- font-family: 'NeuzeitGro-Reg';
-font-weight: normal;
+  font-family: "NeuzeitGro-Reg";
+  font-weight: normal;
   line-height: 1.2;
   margin-bottom: 8px;
 }
@@ -236,10 +244,37 @@ font-weight: normal;
   padding: 8px 25px;
 }
 
+.submitbtnbox button {
+  border: none;
+  outline: none;
+  background-color: transparent;
+  font-family: 'NeuzeitGro-Reg';
+  font-weight: normal;
+  font-size: 16px;
+  padding: 5px 40px;
+  border-radius: 563.025px;
+  color: #fff;
+  border: 1px solid transparent;
+}
+
+.submitbtnbox .submitbtn  { 
+  background: #EA6A12;
+}
+
+.submitbtnbox .cancelbtn {
+  background:rgba(183, 183, 183, 0.8);
+  margin-right: 50px;
+}
+
+.addmanagerpopup .react-tel-input .form-control {
+  width: 100%;
+}
+
+
+
 .wantmanager .popupinner {
   max-width: 400px;
   padding: 30px 15px;
-  background-color: #fff;
   border-radius: 20px;
 }
 
@@ -249,8 +284,8 @@ font-weight: normal;
 
 .wantmanager .popupbody h2 {
   font-size: 30px;
- font-family: 'NeuzeitGro-Bol';
-font-weight: normal;
+  font-family: "NeuzeitGro-Bol";
+  font-weight: normal;
   line-height: 1.2;
   margin: 20px 0;
 }
