--- a/src/Components/DashboardComponents/Categories/categories.css
+++ b/src/Components/DashboardComponents/Categories/categories.css
@@ -1,414 +1,471 @@
 /* /////////recorded category drag and drop//////////// */
 .category-grid {
-    display: grid;
-    grid-template-columns: repeat(10, 1fr);
-    /* Adjust the number of columns as needed */
-    gap: 0.5rem;
-    /* Adjust the gap between items as needed */
-    width: 100%;
-
+  display: grid;
+  grid-template-columns: repeat(10, 1fr);
+  /* Adjust the number of columns as needed */
+  gap: 0.5rem;
+  /* Adjust the gap between items as needed */
+  width: 100%;
 }
 
 .recorded-cat-div {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
 
 .dragCategory {
-    box-shadow: rgba(0, 0, 0, 0.15) 0px 5px 15px 0px;
-    width: 99.111px;
-    height: 182.508px;
-    border-radius: 22.418px;
-    background: rgba(255, 255, 255, 0.40);
-    backdrop-filter: blur(24.780000686645508px);
-    cursor: move;
-    background-color: rgba(255, 255, 255, 0.40);
+  box-shadow: rgba(0, 0, 0, 0.15) 0px 5px 15px 0px;
+  width: 99.111px;
+  height: 182.508px;
+  border-radius: 22.418px;
+  background: rgba(255, 255, 255, 0.4);
+  backdrop-filter: blur(24.780000686645508px);
+  cursor: move;
+  background-color: rgba(255, 255, 255, 0.4);
 }
 
 .dragCategory:hover {
-    background-color: rgba(234, 106, 18, 0.70);
-    color: white;
-
+  background-color: rgba(234, 106, 18, 0.7);
+  color: white;
 }
 
-.ReorderCurese{
-    cursor: pointer;
+.ReorderCurese {
+  cursor: pointer;
 }
 
 .itemCategory {
-    text-align: center;
-    color: #000;
-    font-family: Neuzeit Grotesk;
-    font-size: 13.845px;
-    font-style: normal;
-   font-family: 'NeuzeitGro-Reg';
-font-weight: normal;
-    /* line-height: 175%; */
-    /* 24.229px */
-    /* letter-spacing: 0.277px; */
+  text-align: center;
+  color: #000;
+  font-family: Neuzeit Grotesk;
+  font-size: 13.845px;
+  font-style: normal;
+  font-family: "NeuzeitGro-Reg";
+  font-weight: normal;
+  /* line-height: 175%; */
+  /* 24.229px */
+  /* letter-spacing: 0.277px; */
 }
 
 .itemCategory:hover {
-    color: white;
+  color: white;
 }
 
 .drag-catg-img {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 20px;
-
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
 }
 
 .recorded-cat-head {
-    font-family: Neuzeit Grotesk;
-    font-size: 40px;
-    font-style: normal;
-   font-family: 'NeuzeitGro-Bol';
-font-weight: normal;
-    line-height: 130%;
-    /* 41.6px */
-    letter-spacing: 0.64px;
-    margin-bottom: 30px;
+  font-family: Neuzeit Grotesk;
+  font-size: 40px;
+  font-style: normal;
+  font-family: "NeuzeitGro-Bol";
+  font-weight: normal;
+  line-height: 130%;
+  /* 41.6px */
+  letter-spacing: 0.64px;
+  margin-bottom: 30px;
 }
 
 .button-arrow {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
-    gap: 7px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  gap: 7px;
 }
 
 .indx-div {
-    display: flex;
-    justify-content: end;
+  display: flex;
+  justify-content: end;
 }
 
 .item-indx {
-    border: 1px solid black;
-    border-radius: 50%;
-    width: 24px;
-    height: 25px;
-    text-align: center;
-    background-color: rgba(234, 106, 18, 0.36);
-    border-color: rgba(234, 106, 18, 0.36);
+  border: 1px solid black;
+  border-radius: 50%;
+  width: 24px;
+  height: 25px;
+  text-align: center;
+  background-color: rgba(234, 106, 18, 0.36);
+  border-color: rgba(234, 106, 18, 0.36);
 }
 
 /* ////////category page///////////// */
 
 .sort-order {
-    margin-left: 10px;
-    cursor: pointer;
-    height: 14px;
-    width: 14px;
-    margin-right: 4px;
+  margin-left: 10px;
+  cursor: pointer;
+  height: 14px;
+  width: 14px;
+  margin-right: 4px;
 }
 
 .drag-active {
-    cursor: move;
+  cursor: move;
 }
 
 .item-head {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
 .item-head > h2 {
-    font-size: 28px;
-    color: #000;
-    line-height: 1;    
-    font-family: 'NeuzeitGro-Bol';
-    font-weight: normal;
-    margin: 0;
+  font-size: 28px;
+  color: #000;
+  line-height: 1;
+  font-family: "NeuzeitGro-Bol";
+  font-weight: normal;
+  margin: 0;
 }
 
 .sort-item-order {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .reorder-icon-div {
-    display: flex;
-    justify-content: end;
-    cursor: pointer;
+  display: flex;
+  justify-content: end;
+  cursor: pointer;
 }
 
 .reorder-head {
-    font-family: 'NeuzeitGro-Reg';
-    font-weight: 500;   
-    font-size: 14px;
-    font-style: normal;
-    letter-spacing: 0.24px;
-    line-height: 1;
+  font-family: "NeuzeitGro-Reg";
+  font-weight: 500;
+  font-size: 14px;
+  font-style: normal;
+  letter-spacing: 0.24px;
+  line-height: 1;
 }
 
-.categorypage>.title {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin-bottom: 15px;
+.categorypage > .title {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 15px;
 }
 
-
-.categorypage>.title>h2 {
-    color: #000;
-    font-size: 32px;
-    margin-bottom: 0px;
-   font-family: 'NeuzeitGro-Bol';
-font-weight: normal;
+.categorypage > .title > h2 {
+  color: #000;
+  font-size: 32px;
+  margin-bottom: 0px;
+  font-family: "NeuzeitGro-Bol";
+  font-weight: normal;
 }
 
 .btn1,
 .btn2,
 .btn3 {
-    outline: none;
-    box-shadow: none;
-    font-size: 16px;
-   font-family: 'NeuzeitGro-Reg';
-font-weight: normal;
-    line-height: 1.2;
-    border-radius: 100px;
-    padding: 10px 15px;
-    cursor: pointer;
-
+  outline: none;
+  box-shadow: none;
+  font-size: 16px;
+  font-family: "NeuzeitGro-Reg";
+  font-weight: normal;
+  line-height: 1;
+  border-radius: 100px;
+  padding: 10px 15px;
+  cursor: pointer;
 }
 
-.categorypage>.title .btnbox button+button {
-    margin-left: 10px;
+.categorypage > .title .btnbox button + button {
+  margin-left: 10px;
 }
 
 .btn1 {
-    border: 1px solid #EA6A12;
-    background-color: #FFF;
-    color: #EA6A12;
-    -webkit-transition: all .3s ease;
-    transition: all .3s ease;
+  border: 1px solid #ea6a12;
+  background-color: #fff;
+  color: #ea6a12;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
 }
 
 .btn1:hover {
-    background-color: #EA6A12;
-    color: #fff;
-    border: 1px solid #EA6A12;
-    -webkit-transition: all .3s ease;
-    transition: all .3s ease;
+  background-color: #ea6a12;
+  color: #fff;
+  border: 1px solid #ea6a12;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
 }
 
 .btn1 svg {
-    fill: #EA6A12;
-    margin-right: 5px;
-    -webkit-transition: all .3s ease;
-    transition: all .3s ease;
+  fill: #ea6a12;
+  margin-right: 5px;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
 }
 
 .btn1:hover svg {
-    fill: #fff;
-    -webkit-transition: all .3s ease;
-    transition: all .3s ease;
+  fill: #fff;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
 }
 
 .btn2 {
-    border: 1px solid #EA6A12;
-    background-color: #EA6A12;
-    -webkit-transition: all .3s ease;
-    transition: all .3s ease;
-    color: #fff;
+  border: 1px solid #ea6a12;
+  background-color: #ea6a12;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+  color: #fff;
 }
 
 .btn2 svg {
-    fill: #fff;
-    margin-right: 5px;
-    -webkit-transition: all .3s ease;
-    transition: all .3s ease;
+  fill: #fff;
+  margin-right: 5px;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
 }
 
-
 .btn2:hover {
-    border: 1px solid #EA6A12;
-    background-color: #fff;
-    color: #EA6A12;
-    -webkit-transition: all .3s ease;
-    transition: all .3s ease;
+  border: 1px solid #ea6a12;
+  background-color: #fff;
+  color: #ea6a12;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
 }
 
 .btn2:hover svg {
-    fill: #EA6A12;
-    -webkit-transition: all .3s ease;
-    transition: all .3s ease;
+  fill: #ea6a12;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
 }
 
 .btn3 {
-    padding: 10px 35px;
-    border: 1px solid rgba(205, 205, 205, 0.80);
-    border-radius: 563.025px;
-    background: rgba(205, 205, 205, 0.80);
-    color: #fff;
+  padding: 10px 35px;
+  border: 1px solid rgba(205, 205, 205, 0.8);
+  border-radius: 563.025px;
+  background: rgba(183, 183, 183, 0.8);
+  color: #fff;
 }
 
 .btn3:hover {
-    background: #fff;
-    color: rgba(205, 205, 205, 0.80);
-    -webkit-transition: all .3s ease;
-    transition: all .3s ease;
+  background: #fff;
+  color: rgba(205, 205, 205, 0.8);
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
 }
 
 .categorycontent {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
 
 .submit.btn2 {
-    padding: 10px 35px;
+  padding: 10px 35px;
 }
 
-.categorycontent>.leftpart {
-    width: 60%;
-    padding-right: 15px;
+.categorycontent > .leftpart {
+  width: 60%;
+  padding-right: 15px;
 }
 
-.categorycontent>.rightpart {
-    width: 40%;
-    padding-left: 15px;
+.categorypage .topdishestabpart .nav-tabs .nav-link {
+  position: relative;
 }
 
+.categorypage .editinfobtnbox {
+  position: absolute;
+  width: auto;
+  text-align: center;
+  z-index: 99;
+  top: 6px;
+  right: 8px;
+}
+
+.categorypage .topdishestabpart .nav-tabs .nav-link .editinfobtnbox > button > img {
+  width: 4px;
+}
+
+.categorypage .topdishestabpart nav {
+  padding-top: 40px;
+}
+.editinfobtn{
+  cursor: pointer;
+}
+ 
+.sadfs{
+   cursor:auto !important;
+}  
+
+.curserer{
+  cursor: pointer !important;
+}
+.categorypage .topdishestabpart .nav-tabs .nav-link .editinfobtnbox > .btnbox {
+  position: absolute;
+  top: -44px;
+  right: 2px;
+  width: 70px;
+  height: auto;
+  padding: 5px 8px;
+  background-color: #ffeee7;
+  border-radius: 4px;
+  text-align: left;
+}
+.categorypage .topdishestabpart
+  .nav-tabs
+  .nav-link
+  .editinfobtnbox
+  > .btnbox
+  button {
+  font-size: 11px;
+  display: block;
+}
+
+.categorypage
+  .topdishestabpart
+  .nav-tabs
+  .nav-link
+  .editinfobtnbox
+  > .btnbox::after {
+  position: absolute;
+  content: "";
+  bottom: -22px;
+  right: -10px;
+  width: 30px;
+  height: 30px;
+  background: url(../../../images/arrowimg.svg) top center no-repeat;
+}
+
+.categorycontent > .rightpart {
+  width: 40%;
+  padding-left: 15px;
+}
 
 .bestsellerpart {
-    padding: 25px;
-    border-radius: 20px;
-    background: rgba(255, 255, 255, 0.40);
-    backdrop-filter: blur(21px);
+  padding: 25px;
+  border-radius: 20px;
+  background: rgba(255, 255, 255, 0.4);
+  backdrop-filter: blur(21px);
 }
 
-.bestsellerpart>h2 {
-    color: #000;
-    font-size: 28px;
-   font-family: 'NeuzeitGro-Bol';
-font-weight: normal;
-    line-height: 1.3;
-    margin: 0 0 30px;
+.bestsellerpart > h2 {
+  color: #000;
+  font-size: 28px;
+  font-family: "NeuzeitGro-Bol";
+  font-weight: normal;
+  line-height: 1.3;
+  margin: 0 0 30px;
 }
 
-.bestsellerpart>ul>li {
-    display: flex;
-    justify-content: space-between;
-    margin: 20px 0;
-    border-bottom: 1px solid #EA6A12;
-    padding-bottom: 15px;
-    transition: all .3s ease;
-    -webkit-transition: all .3s ease;
+.bestsellerpart > ul > li {
+  display: flex;
+  justify-content: space-between;
+  margin: 20px 0;
+  border-bottom: 1px solid #ea6a12;
+  padding-bottom: 15px;
+  transition: all 0.3s ease;
+  -webkit-transition: all 0.3s ease;
 }
 
-.bestsellerpart>ul>li:hover {
-    transition: all .3s ease;
-    -webkit-transition: all .3s ease;
-    background: linear-gradient(180deg, rgba(217, 217, 217, 0.00) 0%, rgba(234, 106, 18, 0.20) 100%);
+.bestsellerpart > ul > li:hover {
+  transition: all 0.3s ease;
+  -webkit-transition: all 0.3s ease;
+  background: linear-gradient(
+    180deg,
+    rgba(217, 217, 217, 0) 0%,
+    rgba(234, 106, 18, 0.2) 100%
+  );
 }
 
-.bestsellerpart>ul>li>.leftpart {
-    width: 100px;
-    padding-right: 5px;
+.bestsellerpart > ul > li > .leftpart {
+  width: 100px;
+  padding-right: 5px;
 }
 
-.bestsellerpart>ul>li>.leftpart>img {
-    width: 100%;
+.bestsellerpart > ul > li > .leftpart > img {
+  width: 100%;
 }
 
-.bestsellerpart>ul>li>.rightpart {
-    width: calc(100% - 100px);
+.bestsellerpart > ul > li > .rightpart {
+  width: calc(100% - 100px);
 }
 
-.bestsellerpart>ul>li>.rightpart h3 {
-    color: #000;
-    font-size: 16px;
-   font-family: 'NeuzeitGro-Bol';
-font-weight: normal;
-    line-height: 1.2;
-    margin: 0;
+.bestsellerpart > ul > li > .rightpart h3 {
+  color: #000;
+  font-size: 16px;
+  font-family: "NeuzeitGro-Bol";
+  font-weight: normal;
+  line-height: 1.2;
+  margin: 0;
 }
 
-.bestsellerpart>ul>li>.rightpart p {
-    color: #8E8E8E;
-    font-size: 12px;
-   font-family: 'NeuzeitGro-Reg';
-font-weight: normal;
-    line-height: 1.5;
-    margin: 10px 0;
+.bestsellerpart > ul > li > .rightpart p {
+  color: #8e8e8e;
+  font-size: 12px;
+  font-family: "NeuzeitGro-Reg";
+  font-weight: normal;
+  line-height: 1.5;
+  margin: 10px 0;
 }
 
-
-.bestsellerpart>ul>li>.rightpart .price {
-    color: #EA6A12;
-    font-size: 15px;
-   font-family: 'NeuzeitGro-Reg';
-font-weight: normal;
-    line-height: 1.3;
+.bestsellerpart > ul > li > .rightpart .price {
+  color: #ea6a12;
+  font-size: 15px;
+  font-family: "NeuzeitGro-Reg";
+  font-weight: normal;
+  line-height: 1.3;
 }
-
 
 .uploadbtn-wrapper {
-    position: relative;
-    overflow: hidden;
-    display: inline-block;
-    cursor: pointer;
-    vertical-align: bottom;
-    margin-right: 10px;
+  position: relative;
+  overflow: hidden;
+  display: inline-block;
+  cursor: pointer;
+  vertical-align: bottom;
+  margin-right: 10px;
 }
 
-.uploadbtn-wrapper>button {
-    border: none;
-    outline: none;
-    background-color: transparent;
-    cursor: pointer;
-    color: #EA6A12;
+.uploadbtn-wrapper > button {
+  border: none;
+  outline: none;
+  background-color: transparent;
+  cursor: pointer;
+  color: #ea6a12;
 }
 
-.uploadbtn-wrapper:hover>button {
-    color: #fff;
+.uploadbtn-wrapper:hover > button {
+  color: #fff;
 }
 
-.catg-img {
-    height: 40px;
-    width: 40px;
-    object-fit: contain;
+.uploadbtn-wrapper input[type="file"] {
+  font-size: 100px;
+  width: auto;
+  height: auto;
+  position: absolute;
+  left: 0;
+  top: 0;
+  opacity: 0;
+  cursor: pointer;
 }
 
-.uploadbtn-wrapper input[type=file] {
-    font-size: 100px;
-    width: auto;
-    height: auto;
-    position: absolute;
-    left: 0;
-    top: 0;
-    opacity: 0;
-    cursor: pointer;
+.addmenupopup .popupinnerbox {
+  max-width: 640px;
 }
 
 .addmenupopup .popuptitle {
-    margin-bottom: 25px;
+  margin-bottom: 25px;
 }
-
 .sarbox,
 .caloriesbox {
-    position: relative;
+  position: relative;
 }
 
 .No-active h3 {
-    color: #000 !important;
+  color: #000 !important;
 }
-
-
 
 .sarbox::after,
 .caloriesbox::after {
-    position: absolute;
-    top: -1px;
-    right: -1px;
-    height: calc(100% + 2px);
-    border-radius: 0px 12px 12px 0px;
-    background: #FFE8D8;
-    -webkit-backdrop-filter: blur(21px);
-    backdrop-filter: blur(21px);
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  position: absolute;
+  top: -1px;
+  right: -1px;
+  height: calc(100% + 2px);
+  border-radius: 0px 12px 12px 0px;
+  background: #ffe8d8;
+  -webkit-backdrop-filter: blur(21px);
+  backdrop-filter: blur(21px);
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 /* .sarbox::after {
@@ -417,67 +474,78 @@ font-weight: normal;
 } */
 
 .caloriesbox::after {
-    content: "kcal";
-    width: 47px;
+  content: "kcal";
+  width: 47px;
 }
 
-.sarbox input.form-control {
-    padding-right: 40px;
+.formbox .sarbox input.form-control {
+  padding-left: 5px;
+  padding-right: 58px;
+}
+
+.sarbox select {
+  border-radius: 0px 7px 7px 0px;
+  background: #ffe8d8;
+  -webkit-backdrop-filter: blur(21px);
+  backdrop-filter: blur(21px);
+  border: none;
+  outline: none;
+  position: absolute;
+  top: 0;
+  right: 0;
+  height: 100%;
 }
 
 .caloriesbox input.form-control {
-    padding-right: 50px;
+  padding-right: 50px;
 }
 
 .uploadwrapper {
-    display: inline-block;
-    position: relative;
-    overflow: hidden;
+  display: inline-block;
+  position: relative;
+  overflow: hidden;
 }
 
 .uploadwrapper button {
-    cursor: pointer;
-    border: 1px solid #D2D2D2;
-    background-color: #D2D2D2;
-    padding: 5px 15px;
-    color: #8D8D8D;
-    font-size: 24px;
-    border-radius: 12px;
-   font-family: 'NeuzeitGro-Reg';
-font-weight: normal;
-    line-height: 1.3;
+  cursor: pointer;
+  border: 1px solid #d2d2d2;
+  background-color: #d2d2d2;
+  padding: 5px 15px;
+  color: #8d8d8d;
+  font-size: 24px;
+  border-radius: 12px;
+  font-family: "NeuzeitGro-Reg";
+  font-weight: normal;
+  line-height: 1.3;
 }
 
 .uploadwrapper input {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: auto;
-    height: 100%;
-    display: block;
-    opacity: 0;
-    cursor: pointer;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: auto;
+  height: 100%;
+  display: block;
+  opacity: 0;
+  cursor: pointer;
 }
 
 .addcategorypopup form {
-    position: relative;
+  position: relative;
 }
 
 .addcategorypopup form .categoryimg {
-    position: absolute;
-    top: -80px;
-    right: 0;
-    width: auto;
-    height: auto;
+  position: absolute;
+  top: -80px;
+  right: 0;
+  width: auto;
+  height: auto;
 }
 
-
-@media(max-width:767px) {
-
-    .btn1,
-    .btn2,
-    .btn3 {
-        font-size: 14px;
-    }
-
+@media (max-width: 767px) {
+  .btn1,
+  .btn2,
+  .btn3 {
+    font-size: 14px;
+  }
 }
