--- a/src/Components/DashboardComponents/Dashboard/dashboard.css
+++ b/src/Components/DashboardComponents/Dashboard/dashboard.css
@@ -9,20 +9,24 @@
 
 .bannerbox h2 {
     color: #EA6A12; 
-    font-family: 'NeuzeitGro-Lig';
-    font-size: 45px;
-    font-weight: normal;
+    font-family: 'NeuzeitGro-Reg';
+    font-weight: 400;
+    font-size: 43px;
     line-height: 1.2;
     margin: 0;
+    letter-spacing: 1.156px;
+    text-transform: capitalize;
 }
 
 .bannerbox h3 {
     color: #07143B;
-    font-size: 54px;
+    font-size: 57px;
     font-family: 'NeuzeitGro-Bol';
     font-weight: normal;
-    letter-spacing: 0.96px;
-    margin-bottom: 10px;
+    letter-spacing: 1.156px;
+    margin-bottom: 0px;
+    text-transform: capitalize;
+    
 }
 
 .bannerbox .btn {
@@ -167,7 +171,7 @@ font-weight: normal;
     padding: 10px 5px;
     border-radius: 19px;
     width: 90%;
-    max-width: 100px;
+    max-width: 117px;
 
 }
 
@@ -177,17 +181,22 @@ font-weight: normal;
 } 
 
 .topdishestabpart .nav-tabs .nav-link figure {
-    width: 50px;
-    height: 50px;
+    width: 94px;
+    height: 94px;
     border-radius: 50%;
+    background-color: #fff;
     text-align: center;
-    margin: 0 auto 15px;
-    width: auto;
-    height: auto;
+    margin: 0 auto 18px;
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 5px;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+    overflow: hidden;
+}
+.topdishestabpart .nav-tabs .nav-link figure > img {
+    width: 100%;
+    height: 100%;
+    object-fit: fill;
 }
 
 .topdishestabpart .nav-tabs .nav-link h3 {
@@ -230,38 +239,10 @@ font-weight: normal;
 
 .topdishestabpart .nav-tabs .nav-link:hover,
 .topdishestabpart .nav-tabs .nav-link.active {
-    background: rgba(234, 106, 18, 0.70);
+    background: rgba(234, 106, 18, 0.40);
+    backdrop-filter: blur(100px);
 }
 
-
-.topdishestabpart .nav-tabs .nav-link:hover .buttonbox,
-.topdishestabpart .nav-tabs .nav-link.active .buttonbox {
-    background-color: #fff;
-}
-
-.topdishestabpart .nav-tabs .nav-link:hover h3,
-.topdishestabpart .nav-tabs .nav-link.active h3 {
-    color: #FFF;
-}
-
-.topdishestabpart .nav-tabs .nav-link h3::after {
-    display: block;
-    content: "";
-    width: 60px;
-    height: 1px;
-    background-color: #000;
-    margin: 10px auto 0;
-}
-
-.topdishestabpart .nav-tabs .nav-link:hover h3::after,
-.topdishestabpart .nav-tabs .nav-link.active h3::after {
-    background-color: #fff;
-}
-
-.topdishestabpart .nav-tabs .nav-link:hover .buttonbox svg,
-.topdishestabpart .nav-tabs .nav-link.active .buttonbox svg {
-    stroke: #EA6A12;
-}
 
 
 .topdishestabpart .tab-content {
@@ -291,7 +272,7 @@ font-weight: normal;
 
 .topdishestabpart .tab-content ul li>.title {
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     justify-content: space-between;
     margin-bottom: 15px;
 }
@@ -332,7 +313,7 @@ font-weight: normal;
 } */
 
 
-.editinfobtn {
+.editinfobtn { 
     width: 20px;
     text-align: center;
     position: relative;
@@ -348,6 +329,7 @@ font-weight: normal;
 
 
 .topdishestabpart .tab-content ul li>.title .editinfobtn > .btnbox { 
+    
     position: absolute;
     top: -44px;
     right: 2px;
@@ -440,7 +422,7 @@ font-weight: normal;
     display: flex;
     justify-content: space-between;
     align-items: flex-end;
-    height: calc(100% - 13px);
+    /* height: calc(100% - 13px); */
 }
 
 .topdishestabpart .tab-content ul li .tabinfo>.leftpart {
@@ -513,6 +495,7 @@ font-weight: normal;
     align-items: center;
     justify-content: space-between;
     background: rgba(255, 255, 255, 0.60);
+    backdrop-filter: blur(21px);
     border-radius: 12px;
 }
 
