--- a/src/Components/DashboardComponents/Dashboard/dashboard.css
+++ b/src/Components/DashboardComponents/Dashboard/dashboard.css
@@ -8,7 +8,7 @@
 }
 
 .bannerbox h2 {
-    color: #EA6A12; 
+    color: #EA6A12;
     font-family: 'NeuzeitGro-Reg';
     font-weight: 400;
     font-size: 43px;
@@ -26,14 +26,14 @@
     letter-spacing: 1.156px;
     margin-bottom: 0px;
     text-transform: capitalize;
-    
+
 }
 
 .bannerbox .btn {
     color: #fff;
     font-size: 16px;
-   font-family: 'NeuzeitGro-Reg';
-font-weight: normal;
+    font-family: 'NeuzeitGro-Reg';
+    font-weight: normal;
     line-height: 1.2;
     letter-spacing: 0.325px;
     padding: 10px 16px;
@@ -61,8 +61,9 @@ font-weight: normal;
     width: 60%;
     position: relative;
     z-index: 1;
-    
+
 }
+
 .viewall-part>.leftpart::after {
     position: absolute;
     content: "";
@@ -73,7 +74,7 @@ font-weight: normal;
     background: rgba(252, 237, 227, 0.30);
     filter: blur(84.5px);
     z-index: -1;
-} 
+}
 
 .topdishespart>.title {
     display: flex;
@@ -95,8 +96,8 @@ font-weight: normal;
     outline: none;
     background-color: transparent;
     font-size: 12px;
-   font-family: 'NeuzeitGro-Reg';
-font-weight: normal;
+    font-family: 'NeuzeitGro-Reg';
+    font-weight: normal;
     line-height: 1.2;
 }
 
@@ -176,9 +177,9 @@ font-weight: normal;
 }
 
 
-.topdishestabpart .nav-tabs .nav-link + .nav-link {
+.topdishestabpart .nav-tabs .nav-link+.nav-link {
     margin-left: 28px;
-} 
+}
 
 .topdishestabpart .nav-tabs .nav-link figure {
     width: 94px;
@@ -193,7 +194,8 @@ font-weight: normal;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
     overflow: hidden;
 }
-.topdishestabpart .nav-tabs .nav-link figure > img {
+
+.topdishestabpart .nav-tabs .nav-link figure>img {
     width: 100%;
     height: 100%;
     object-fit: fill;
@@ -280,8 +282,8 @@ font-weight: normal;
 .topdishestabpart .tab-content ul li h4 {
     color: #000;
     font-size: 14px;
-   font-family: 'NeuzeitGro-Bol';
-font-weight: normal;
+    font-family: 'NeuzeitGro-Bol';
+    font-weight: normal;
     line-height: 1.2;
     margin: 0;
     transition: all .3s ease;
@@ -293,10 +295,11 @@ font-weight: normal;
     align-items: center;
 }
 
-.editinfostar .starbtn { 
-    margin-right: 10px;
+.editinfostar .starbtn {
+    margin-right: 2px;
     width: 14px;
 }
+
 .editinfostar .starbtn img {
     width: 100%;
 }
@@ -313,26 +316,26 @@ font-weight: normal;
 } */
 
 
-.editinfobtn { 
+.editinfobtn {
     width: 20px;
     text-align: center;
     position: relative;
 }
 
-.topdishestabpart .tab-content ul li>.title .editinfobtn > button {
+.topdishestabpart .tab-content ul li>.title .editinfobtn>button {
     width: 5px;
 }
 
-.topdishestabpart .tab-content ul li>.title .editinfobtn > button > img {
+.topdishestabpart .tab-content ul li>.title .editinfobtn>button>img {
     width: 100%;
 }
 
 
-.topdishestabpart .tab-content ul li>.title .editinfobtn > .btnbox { 
-    
+.topdishestabpart .tab-content ul li>.title .editinfobtn>.btnbox {
+
     position: absolute;
     top: -44px;
-    right: 2px;
+    right: 12px;
     width: 70px;
     height: auto;
     padding: 5px 8px;
@@ -341,7 +344,7 @@ font-weight: normal;
     border-radius: 4px;
 }
 
-.topdishestabpart .tab-content ul li>.title .editinfobtn > .btnbox::after{
+.topdishestabpart .tab-content ul li>.title .editinfobtn>.btnbox::after {
     position: absolute;
     content: "";
     bottom: -22px;
@@ -352,19 +355,20 @@ font-weight: normal;
 
 }
 
-.topdishestabpart .tab-content ul li>.title .editinfobtn > .btnbox button {
+.topdishestabpart .tab-content ul li>.title .editinfobtn>.btnbox button {
     font-size: 11px;
 }
 
-.editinfobtn > .btnbox > button{
+.editinfobtn>.btnbox>button {
     display: block;
-    
+
 }
-.editinfobtn > .btnbox > button > img {
+
+.editinfobtn>.btnbox>button>img {
     margin-right: 5px;
 }
 
-.editbtn { 
+.editbtn {
     color: #000;
 }
 
@@ -373,7 +377,7 @@ font-weight: normal;
     color: #E52614;
 }
 
-.deletbtn > img {
+.deletbtn>img {
     width: 9px;
 }
 
@@ -389,8 +393,8 @@ font-weight: normal;
 .topdishestabpart .tab-content ul li p {
     color: #8E8E8E;
     font-size: 10px;
-   font-family: 'NeuzeitGro-Reg';
-font-weight: normal;
+    font-family: 'NeuzeitGro-Reg';
+    font-weight: normal;
     line-height: 1.5;
     margin: 10px 0;
     transition: all .3s ease;
@@ -399,7 +403,7 @@ font-weight: normal;
 .topdishestabpart .tab-content ul li .price {
     color: #EA6A12;
     font-size: 15px;
-   font-family: 'NeuzeitGro-Reg';
+    font-family: 'NeuzeitGro-Reg';
     font-weight: normal;
     line-height: 1.2;
     transition: all .3s ease;
@@ -412,7 +416,7 @@ font-weight: normal;
 
 .topdishestabpart .tab-content ul li:hover h4,
 .topdishestabpart .tab-content ul li:hover p,
-.topdishestabpart .tab-content ul li:hover .price ,
+.topdishestabpart .tab-content ul li:hover .price,
 .topdishestabpart .tab-content ul li:hover h5 {
     color: #fff;
     transition: all .3s ease;
@@ -436,10 +440,12 @@ font-weight: normal;
 }
 
 .topdishestabpart .tab-content ul li .tabinfo>.rightpart>img {
-    width: 100%;
-    height: 75px;
+    width: 65px;
+    height: 65px;
     border-radius: 5px;
-    object-fit: contain;
+    object-fit: cover;
+    border-radius: 50%;
+    box-shadow: 0px 4px 4px 0px rgb(234 106 18 / 25%);
 }
 
 .managerstablepart {
@@ -465,8 +471,8 @@ font-weight: normal;
     outline: none;
     background-color: transparent;
     font-size: 12px;
-   font-family: 'NeuzeitGro-Reg';
-font-weight: normal;
+    font-family: 'NeuzeitGro-Reg';
+    font-weight: normal;
     line-height: 1.2;
 }
 
@@ -569,8 +575,8 @@ font-weight: normal;
     color: #000;
     font-size: 28px;
     font-family: 'NeuzeitGro-Bol';
-   font-family: 'NeuzeitGro-Bol';
-font-weight: normal;
+    font-family: 'NeuzeitGro-Bol';
+    font-weight: normal;
     line-height: 1.3;
     padding-right: 10px;
 }
@@ -588,9 +594,9 @@ font-weight: normal;
 
 .subplanbox>.title button img {
     margin-left: 5px;
-} 
+}
 
-.subplanbox>.info { 
+.subplanbox>.info {
     display: flex;
     justify-content: space-between;
     align-items: flex-end;
@@ -647,8 +653,8 @@ font-weight: normal;
 .qrbox>.info>span {
     color: #000;
     font-size: 16px;
-   font-family: 'NeuzeitGro-Reg';
-font-weight: normal;
+    font-family: 'NeuzeitGro-Reg';
+    font-weight: normal;
     line-height: 1.3;
 }
 
@@ -661,9 +667,9 @@ font-weight: normal;
     line-height: 1.3;
     font-family: 'NeuzeitGro-Bol';
     font-weight: normal;
-    margin:-55px 0 0px 20px;
+    margin: -55px 0 0px 20px;
     position: relative;
-} 
+}
 
 .qrbox>.info button::after {
     content: "";
@@ -696,9 +702,11 @@ font-weight: normal;
     .viewall-part {
         flex-wrap: wrap;
     }
+
     .viewall-part>.leftpart {
         width: 100%;
     }
+
     .viewall-part>.rightpart {
         width: 100%;
         margin-top: 25px;
@@ -706,20 +714,19 @@ font-weight: normal;
 }
 
 
-@media(max-width:580px) { 
-.bannerbox h2 {
-    font-size: 18px;
-}
+@media(max-width:580px) {
+    .bannerbox h2 {
+        font-size: 18px;
+    }
 
-.bannerbox h3{
-    font-size: 23px;
-}
-.managerstablepart>.title>h2,
-.topdishespart>.title>h2,
-.subplanbox>.title h3    {
-    font-size: 20px;
-}
+    .bannerbox h3 {
+        font-size: 23px;
+    }
+
+    .managerstablepart>.title>h2,
+    .topdishespart>.title>h2,
+    .subplanbox>.title h3 {
+        font-size: 20px;
+    }
 
 }
-
-
