UI changes and read more functionality.

--- a/src/Components/DashboardComponents/DashboardSidebar/dashboardSidebar.css
+++ b/src/Components/DashboardComponents/DashboardSidebar/dashboardSidebar.css
@@ -144,7 +144,7 @@
     height: auto;
     padding: 10px 20px;
     border-radius: 1000px;
-    background-color: #f8f8f8;
+    background-color: #fff;
     margin-bottom: 15px;
     position: relative;
     text-decoration: none;
