--- a/src/Components/DashboardComponents/Categories/categories.css
+++ b/src/Components/DashboardComponents/Categories/categories.css
@@ -495,6 +495,8 @@
   top: 0;
   right: 0;
   height: 100%;
+  font-family: "NeuzeitGro-Reg";
+  font-weight: normal;
 }
 
 .caloriesbox input.form-control {
