--- a/src/Components/DashboardComponents/DashboardHeader/dashboardHeader.css
+++ b/src/Components/DashboardComponents/DashboardHeader/dashboardHeader.css
@@ -58,6 +58,10 @@ header .rightpart .user figure {
 
 }
 
+header .rightpart .user .userinfo {
+    min-width: 50px;
+}
+
 header .rightpart .user figure>img {
     width: 100%;
     height: 100%;
@@ -98,7 +102,7 @@ header .rightpart .user p {
 
 .dropdownoptbox {
     position: absolute;
-    top: 8px;
+    top: 22px;
     right: 0;
     width: 102px;
     border-radius: 2px;
