--- a/src/Components/DashboardComponents/Manager/manager.css
+++ b/src/Components/DashboardComponents/Manager/manager.css
@@ -232,7 +232,9 @@
 }
 .formbox .form-control {
   font-size: 16px;
-  padding: 10px 15px;
+  padding: 10px 15px; 
+  font-family: "NeuzeitGro-Reg";
+  font-weight: normal;
   color: #000;
   border: none;
   outline: none;
