--- a/src/Components/DashboardComponents/Categories/categories.css
+++ b/src/Components/DashboardComponents/Categories/categories.css
@@ -264,13 +264,18 @@
 
 .categorypage .editinfobtnbox {
   position: absolute;
-  width: auto;
+  width: 3px;
   text-align: center;
   z-index: 99;
-  top: 6px;
+  top: 12px;
   right: 8px;
   cursor: pointer;
 }
+
+.categorypage .editinfobtnbox> button > img {
+  display: block;
+}
+
 
 .categorypage .topdishestabpart .nav-tabs .nav-link .editinfobtnbox > button > img {
   width: 4px;
@@ -278,10 +283,9 @@
 
 .categorypage .topdishestabpart nav {
   padding-top: 40px;
+  margin-top: -40px;
 }
-.editinfobtn{
-  cursor: pointer;
-}
+
  
 .sadfs{
    cursor:auto !important;
@@ -301,12 +305,8 @@
   border-radius: 4px;
   text-align: left;
 }
-.categorypage .topdishestabpart
-  .nav-tabs
-  .nav-link
-  .editinfobtnbox
-  > .btnbox
-  button {
+
+.categorypage .topdishestabpart .nav-tabs .nav-link .editinfobtnbox > .btnbox button {
   font-size: 11px;
   display: block;
 }
@@ -350,21 +350,19 @@
 .bestsellerpart > ul > li {
   display: flex;
   justify-content: space-between;
-  margin: 20px 0;
-  border-bottom: 1px solid #ea6a12;
-  padding-bottom: 15px;
+  margin: 17px 0;
+  border-bottom: .5px solid #ea6a12;
+  padding: 0 5px
+   15px;
   transition: all 0.3s ease;
   -webkit-transition: all 0.3s ease;
+  background:transparent;
 }
 
-.bestsellerpart > ul > li:hover {
+.bestsellerpart > ul > li:hover { 
   transition: all 0.3s ease;
   -webkit-transition: all 0.3s ease;
-  background: linear-gradient(
-    180deg,
-    rgba(217, 217, 217, 0) 0%,
-    rgba(234, 106, 18, 0.2) 100%
-  );
+  background: linear-gradient(180deg,rgba(217, 217, 217, 0) 0%, rgba(234, 106, 18, 0.2) 100%);
 }
 
 .bestsellerpart > ul > li > .leftpart {
@@ -373,11 +371,15 @@
 }
 
 .bestsellerpart > ul > li > .leftpart > img {
-  width: 100%;
+  width: 90px;
+  height: 90px;
+  display: block;
+  border-radius: 50%;
+  box-shadow: 0 0 2px #000;
 }
 
 .bestsellerpart > ul > li > .rightpart {
-  width: calc(100% - 100px);
+  width: calc(100% - 113px);
 }
 
 .bestsellerpart > ul > li > .rightpart h3 {
