--- a/src/Components/DashboardComponents/DashboardHeader/dashboardHeader.css
+++ b/src/Components/DashboardComponents/DashboardHeader/dashboardHeader.css
@@ -108,6 +108,7 @@ header .rightpart .user p {
     border-radius: 2px;
     background: #FFEEE7;
     padding: 5px 10px ;
+    z-index: 9999999;
 }
 
 .dropdownoptbox>button {
