--- a/src/Components/DashboardComponents/DashboardSidebar/dashboardSidebar.css
+++ b/src/Components/DashboardComponents/DashboardSidebar/dashboardSidebar.css
@@ -47,6 +47,7 @@
     flex-direction: column;
     -webkit-transition: all.3s ease;
     transition: all .3s ease;
+    z-index: 1;
 }
 
 .navmenu li a {
