--- a/src/Components/DashboardComponents/Dashboard/dashboard.css
+++ b/src/Components/DashboardComponents/Dashboard/dashboard.css
@@ -270,7 +270,8 @@
   display: flex;
   align-items: flex-start;
   justify-content: space-between;
-  margin-bottom: 5px;
+  margin-bottom: 0;
+  min-height: 38px;
 }
 
 .topdishestabpart .tab-content ul li h4 {
@@ -281,6 +282,8 @@
   line-height: 1.2;
   margin: 0;
   transition: all 0.3s ease;
+  display: flex;
+  align-items: center;
 }
 
 .editinfostar {
@@ -446,13 +449,14 @@
 .topdishestabpart .tab-content ul li .tabinfo {
   display: flex;
   justify-content: space-between;
-  align-items: flex-end;
-  /* height: calc(100% - 13px); */
 }
 
 .topdishestabpart .tab-content ul li .tabinfo > .leftpart {
   width: calc(100% - 70px);
   padding-right: 5px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .topdishestabpart .tab-content ul li .tabinfo > .rightpart {
@@ -764,6 +768,11 @@
   position: absolute;
   left: -14px;
   top: -4px;
+}
+
+.topdishestabpart .tab-content > .active ,
+.topdishestabpart .tab-content  .tab-pane {
+  outline: none;
 }
 
 /**************************  scrollbar  ***************************************/
